<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PinMe</string>
    
    <!-- Generic Strings -->
    <string name="base_url">http://switchcodes.in/sandbox/projectpackets/t5/user/</string>
    <string name="backup_base_url">http://54.200.232.37:8080/java/user/</string>
    <string name="base_url_location">http://switchcodes.in/sandbox/projectpackets/t5/location/</string>
    <string name="errorMessage">Error!</string>
	<string name="ok">Continue</string>
	<string name="cancel">Cancel</string>
	<string name="invalid_input_generic">Invalid input! Please try again!</string>
	<string name="congratulations">Congratulations!</string>
	<string name="upload_new_image">Take photo</string>
	<string name="choose_image">Choose photo</string>
	
    <!-- Login & Registration Activity -->
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    
    <!-- Login Activity -->
    <string name="login_button">Login</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="register">New to App? Register Here</string>
    <string name="key_not_retrieved">Couldn\'t connect to the server. Please try again.</string>
    
    <!-- Registration Activity -->
    <string name="continue_button">Continue</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="user_image_description">Upload user profile image</string>
	<string name="retype_password">Retype Password</string>
	<string name="passwords_not_equal">Invalid input! Your entered passwords are not the same!</string>
	<string name="successMessageRegistration">You are now registered! Please login with your details.</string>
	
	<!-- Forgotten Password Activity -->
	<string name="email_address_2">Please enter your e-mail</string>
	
	<!-- Settings Activity -->
	<string name="settings_title">Settings</string>
	<string name="locate_me_button">Locate Me</string>
	<string name="logout_title">Logout</string>
	
	<string name="pref_general_title">General</string>
	<string name="pref_title_my_account">My Account</string>
	<string name="pref_summary_my_account">Change user name, last name, email, profile picture or password.</string>

	
	<string name="pref_advanced_title">Advanced</string>
	<string name="pref_title_request_interval">Request interval</string>
	<string name="pref_summary_request_interval">Set how long the app should log (in minutes)</string>
	<string name="pref_title_distance">Distance</string>
	<string name="pref_summary_distance">Set distance between each log (in mts)</string>
	<string name="pref_title_logout_limit">Logout limit</string>
	<string name="pref_summary_logout_limit">Set how long the app should stay logged in to the server (in mins)</string>
	
	<string name="pref_about_title">About</string>
	<string name="pref_title_version">Version 1.0</string>
	<string name="pref_summary_version">Help, Terms of Service, Licenses</string>
	
	<!-- Map Activity -->
	<string name="play_services_missing">Google Play services not available. Make sure that your device has access to Google Play Services if you like to use this application! SevLogger will be closed.</string>
	<string name="log_service_running">Log Service is running!</string>
	<string name="log_service_stopped">Sorry! An error occurred in LogService! It has been stopped.</string>
	<string name="hint">Press "Locate Me" to find a venue near you.</string>
	
	<!-- Check In Activity -->
	<string name="check_in_title">Venue</string>
	<string name="check_in_button">Pin Me</string>
	<string name="pin_description">Pin Image</string>
	
	<!-- Review Activity -->
	<string name="review_title">Review Venue</string>
	<string name="review_button">Submit Review</string>
	<string name="enter_review">Enter Your Review Here&#8230;</string>
	<string name="review_success_title">Thanks</string>
	<string name="review_success">For Your Review. Continue To Map?</string>
	<string name="image_description">Upload a venue image</string>
	
	<!-- Row -->
	<string name="id">id</string>
	<string name="category_id">CategoryId</string>
	<string name="no_venue_review">Sorry but there is no reviews for current location.</string>
	<string name="profile_title">Profile</string>
	<string name="comment_description">Comment Button</string>
	
	<!-- Profile Activity -->
	<string name="profileTitle">Profile</string>
	<string name="edit_profile">Edit Profile</string>
		
	<!-- Account Activity -->
	<string name="accountTitle">My Account</string>
	
	<!-- Other Users Profile Activity -->
	<string name="no_venue_review">Sorry but there are no reviews for your current location.</string>
	
	<!-- Reviewer Profile Activity -->
	<string name="reviews">Reviews</string>
	<string name="follow_button">Follow</string>
	<string name="location_image_description">Location Image</string>
	<string name="user_name">Unknown</string>
	<string name="profile_image">Profile image</string>
	<string name="image_button">Image button</string>
	
	<!--  New Check In -->
	<string name="call_button">Call Button</string>
	<string name="directions_button">Directions Button</string>
	<string name="website_button">Website Button</string>
	<string name="location_name">Location Name</string>
	
	<!-- SearchService -->
	<string name="service_description">PinMe SearchService running</string>
</resources>
