<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/locationImage"
        android:contentDescription="@string/location_image_description"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/default_venue" />

    <TextView
        android:id="@+id/venueName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:background="#80FFFFFF"
        android:gravity="center"
        android:text="@string/location_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/locationImage"
        android:layout_above="@+id/checkInButton"
        android:choiceMode="multipleChoice"
        android:divider="@null"
        android:dividerHeight="0px"
        android:drawSelectorOnTop="false" />
	    
    <!-- Set the android:button attribute to the state list drawable -->
    <Button
	    android:id="@+id/checkInButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:background="@drawable/actionbar"
	    android:gravity="center"
	    android:text="@string/check_in_button" />

    <Button
        android:id="@+id/directionsButton"
        android:contentDescription="@string/directions_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/list"
        android:layout_alignRight="@+id/locationImage"
        android:layout_alignBottom="@+id/locationImage"
        android:background="@drawable/ic_action_directions" />

    <Button
        android:id="@+id/websiteButton"
        android:contentDescription="@string/website_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/directionsButton"
        android:layout_toLeftOf="@+id/directionsButton"
        android:background="@drawable/ic_action_web_site" />

    <Button
        android:id="@+id/callButton"
        android:contentDescription="@string/call_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/websiteButton"
        android:layout_toLeftOf="@+id/websiteButton"
        android:background="@drawable/ic_action_call" />

</RelativeLayout>
