<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/email_box"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/password_box"
        android:layout_alignParentTop="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="98dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/email_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_box"
        android:layout_below="@+id/password_box"
        android:layout_marginTop="111dp"
        android:background="@drawable/actionbar"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_box"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="22dp"
        android:layout_toLeftOf="@+id/login_button"
        android:text="@string/forgotten_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_box"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="31dp"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

</RelativeLayout>